#cmake file for module HttpMgr
#author:xuping
#created:2019/6/27 15:58:14

SET(HTTPMGR
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/HttpMgr.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/HttpMgr.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/HttpBase.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/HttpBase.h"	
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
		${THIRD_LIBRARIES_INCLUDE_DIR}/curl		
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/curl	
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${HTTPMGR})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		debug "${THIRD_LIBRARIES_DEBUG_DIR}/libcurl.lib"		
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)

ENDIF(LINUX)

ADD_LIBRARY( HttpMgr SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${COMMON_TIME}
	${HTTPMGR}
)

SET_PROPERTY(TARGET HttpMgr PROPERTY FOLDER "Logic")

TARGET_LINK_LIBRARIES( HttpMgr
    ${THIRD_LIB_DEBUG}
    ${THIRD_LIB_RELEASE}
)