#cmake file for module NetService
#author:xuping
#created:2019/4/23 10:59:11

SET(NETSERVICE
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/NetService.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/NetService.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/NetListenerMgr.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/NetListenerMgr.h"	
	"${CMAKE_CURRENT_SOURCE_DIR}/TcpConnection.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/TcpConnection.h"	
	"${CMAKE_CURRENT_SOURCE_DIR}/NetIOEngine.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/NetIOEngine.h"		
	"${CMAKE_CURRENT_SOURCE_DIR}/IOEngine_Epoll.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/IOEngine_Epoll.h"		
	"${CMAKE_CURRENT_SOURCE_DIR}/IOEngine_IOCP.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/IOEngine_IOCP.h"		
)

IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${NETSERVICE})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		"${THIRD_LIBRARIES_DEBUG_DIR}/DbgHelp.Lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)

ENDIF(LINUX)

ADD_LIBRARY( NetService SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${COMMON_TIME}
	${NETSERVICE}
)

SET_PROPERTY(TARGET NetService PROPERTY FOLDER "Logic")