#cmake file for module TextCommand
#author:xuping
#created:2019/6/26 14:54:57

SET(TEXTCOMMAND
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/TextCommand.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/TextCommand.h"
)
IF(WIN32)
	INCLUDE_DIRECTORIES(
		${API_DIR}
		${PUBLIC_DIR}
		${THIRD_LIBRARIES_INCLUDE_DIR}/DbgHelp.h
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(WIN32)

IF(LINUX)
	INCLUDE_DIRECTORIES(
        ${API_DIR}
        ${PUBLIC_DIR}
        ${2D_DIR}
		${COMMON_TIME_DIR}
		${TINYXML_DIR}
		${LOGIC_INTERFACE_DIR}
		${LOGIC_DEFINE_DIR}
	)
ENDIF(LINUX)
MESSAGE(STATUS ${LOGIC_INTERFACE})
SOURCE_GROUP( Api	FILES ${API})
SOURCE_GROUP( Define FILES ${LOGIC_DEFINE})
SOURCE_GROUP( Public\\Tinyxml FILES ${TINYXML})
SOURCE_GROUP( Public\\2D FILES ${2D})
SOURCE_GROUP( Public\\time FILES ${COMMON_TIME})
SOURCE_GROUP( Public FILES ${PUBLIC})
SOURCE_GROUP( Interface FILES ${LOGIC_INTERFACE})
SOURCE_GROUP( \\ FILES ${TEXTCOMMAND})

IF(WIN32)
	SET(THIRD_LIB_DEBUG
		"${THIRD_LIBRARIES_DEBUG_DIR}/DbgHelp.Lib"
	)
	SET(THIRD_LIB_RELEASE
	)
ENDIF(WIN32)

IF(LINUX)

ENDIF(LINUX)

ADD_LIBRARY( TextCommand SHARED
	${PUBLIC}
	${API}
	${LOGIC_INTERFACE}
	${LOGIC_DEFINE}
	${TINYXML}
	${COMMON_TIME}
	${TEXTCOMMAND}
)

SET_PROPERTY(TARGET TextCommand PROPERTY FOLDER "Logic")

ADD_DEPENDENCIES(TextCommand NetGrid)

TARGET_LINK_LIBRARIES( TextCommand
	${KERNEL_LIBD}
	${KERNEL_LIB}
)